--- a/app/src/main/res/layout/custom_input_field.xml
+++ b/app/src/main/res/layout/custom_input_field.xml
@@ -19,7 +19,7 @@
     <EditText
         android:id="@+id/edit_text_field"
         android:layout_width="0dp"
-        android:layout_height="57dp"
+        android:layout_height="30dp"
         android:background="@null"
         android:gravity="top"
         android:inputType="textEmailAddress"
@@ -34,9 +34,9 @@
         android:id="@+id/edit_text_line"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="27dp"
+        android:layout_marginStart="8dp"
         android:background="@color/Light_Gray"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_field"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_field" />
 </androidx.constraintlayout.widget.ConstraintLayout>
