--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -21,7 +21,7 @@
         android:id="@+id/sign_you_in_title"
         style="@style/AppTextStyle"
         android:layout_width="0dp"
-        android:layout_height="68dp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal|top"
         android:text="@string/lets_log_in_title"
         android:textAppearance="@style/log_in_text"
@@ -34,7 +34,7 @@
         android:id="@+id/sign_you_in_description"
         style="@style/AppTextStyle"
         android:layout_width="0dp"
-        android:layout_height="68dp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal|top"
         android:text="@string/sign_in_description_text"
         android:textAppearance="@style/sign_in_description"
@@ -48,22 +48,27 @@
         layout="@layout/custom_input_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sign_you_in_description"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/sign_you_in_description" />
 
     <include
         android:id="@+id/password_group"
         layout="@layout/custom_input_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/email_group"
+        android:layout_marginTop="52dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/email_group" />
 
     <Button
         android:id="@+id/log_in_button"
         style="@style/AppTextStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="16dp"
@@ -74,6 +79,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_group"
-        android:layout_width="wrap_content" />
+        app:layout_constraintVertical_bias="0.643" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
