--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,10 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Light_Gray">#D9D9D9</color>
+    <color name="dark_blue">#030446</color>
+    <color name="silver">#BAB7B7</color>
+    <color name="black">#000000</color>
+    <color name="pink">#B3EE706B</color>
 </resources>
