--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,30 +2,31 @@
 <resources>
     <style name="AppTextStyle">
         <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="log_in_button">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="log_in_text">
         <item name="android:textSize">35sp</item>
-        <item name="android:textColor">#030446</item>
+        <item name="android:textColor">@color/dark_blue</item>
     </style>
 
     <style name="sign_in_description">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#BAB7B7</item>
+        <item name="android:textColor">@color/silver</item>
     </style>
 
     <style name="email">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#BAB7B7</item>
+        <item name="android:textColor">@color/silver</item>
     </style>
 
     <style name="default_email">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
