set up add post page - nofar

--- a/app/src/main/res/drawable/log_in_btn.xml
+++ b/app/src/main/res/drawable/log_in_btn.xml
@@ -5,8 +5,7 @@
     android:width="277dp"
     android:height="51dp"
     android:viewportWidth="277"
-    android:viewportHeight="51"
-    tools:ignore="MissingDefaultResource">
+    android:viewportHeight="51">
     <group>
         <clip-path
             android:pathData="M25.5 0H251.5C265.583 0 277 11.4167 277 25.5C277 39.5833 265.583 51 251.5 51H25.5C11.4167 51 0 39.5833 0 25.5C0 11.4167 11.4167 0 25.5 0Z"
