--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="silver">#BAB7B7</color>
     <color name="black">#000000</color>
     <color name="pink">#B3EE706B</color>
+    <color name="light_white">#FCFCFC</color>
 </resources>
