connect to firebase - sign in + up

--- a/app/src/main/res/layout/activity_group_profile.xml
+++ b/app/src/main/res/layout/activity_group_profile.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins"
-            android:text="Develop Group"
+            android:text="@string/develop_group"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -82,7 +82,7 @@
             android:layout_marginTop="-10dp"
             android:alpha="0.5"
             android:fontFamily="@font/poppins"
-            android:text="Collage Of Management"
+            android:text="@string/collage_of_management"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
