set up forget password page (with firebase) + log out option

--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/new_post"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -88,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40sp"
         android:layout_weight="1"
-        android:background="@drawable/log_in_btn"
+        android:src="@drawable/log_in_btn"
         android:gravity="center"
         android:text="@string/post"
         android:textAppearance="@style/log_in_button"
@@ -106,5 +105,18 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/sign_out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/sign_out"
+        app:layout_constraintBottom_toBottomOf="@+id/new_post_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.692"
+        app:layout_constraintStart_toEndOf="@+id/new_post_image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
