--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Light_Gray">#D9D9D9</color>
+    <color name="gray">#BAB7B7</color>
     <color name="dark_blue">#030446</color>
     <color name="silver">#BAB7B7</color>
     <color name="black">#000000</color>
