--- a/app/src/main/res/layout/activity_sign_up_company.xml
+++ b/app/src/main/res/layout/activity_sign_up_company.xml
@@ -6,31 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".SignUpCompany">
 
-    <EditText
-        android:id="@+id/email"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="100dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/input_suggestions"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/poppins"
+        android:text="Get Started"
+        android:textAlignment="center"
+        android:textColor="@color/purple_700"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-10dp"
+        android:alpha="0.6"
+        android:text="create a free account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:text="create a free account" />
+
+    <EditText
+        android:id="@+id/companyName"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="50dp"
+        android:ems="10"
+        android:hint="Company Name"
+        android:inputType="text"
+        android:background="@drawable/rounded_box"
+        android:backgroundTint="#E8E8E8"
+        android:paddingLeft="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="320dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:background="@drawable/rounded_box"
+        android:backgroundTint="#E8E8E8"
+        android:paddingLeft="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/companyName" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_suggestions"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/password"
+        android:layout_width="320dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/rounded_box"
+        android:backgroundTint="#E8E8E8"
+        android:paddingLeft="20dp"
+        app:boxStrokeWidth="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email">
@@ -38,7 +80,8 @@
         <AutoCompleteTextView
             android:id="@+id/companySuggestion"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="39dp"
+            android:hint="Address.."
             app:layout_constraintTop_toBottomOf="@+id/email"
             tools:layout_editor_absoluteX="5dp">
 
@@ -48,17 +91,19 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="wrap_content"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="290dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="192dp"
+        android:background="@drawable/rounded_box"
+        android:backgroundTint="#E8E8E8"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:paddingLeft="20dp"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_company"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_suggestions" />
 
@@ -66,7 +111,7 @@
         android:id="@+id/sign_up_company"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="44dp"
         android:text="@string/sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
