set up room - sqlLite

--- a/app/src/main/res/layout/fragment_group_profile.xml
+++ b/app/src/main/res/layout/fragment_group_profile.xml
@@ -47,6 +47,12 @@
             android:layout_height="110dp"
             android:background="@drawable/collage_logo"
             android:orientation="vertical"/>
+
+            <ImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:background="@drawable/collage_logo"
+                android:orientation="vertical"/>
         </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
